# attackstream-indexer

./: .gitignore  README.md  attackstream-indexer.cabal  circle.yml  run.sh  stack.yaml
app/: Main.hs  Service.hs
docker/: start.sh
scripts/: container.sh
src/App/: AppError.hs  AppOptions.hs  AppState.hs  Application.hs  Compression.hs  FileChange.hs  Index.hs  IndexFile.hs  Kafka.hs  Options.hs  Submissions.hs  XmlIndexFile.hs
src/App/AWS/: S3.hs
tests/App/: IndexFileSpec.hs
