name:                attackstream-indexer
version:             1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/packetloop/attackstream-indexer#readme
license:             MIT
license-file:        LICENSE
author:              Arbor Networks
maintainer:          mayhem@arbor.net
copyright:           Arbor Networks
category:            Services
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , contract/fileChange.avsc

executable attackstream-indexer
  hs-source-dirs:       app
  main-is:              Main.hs
  other-modules:        Service
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , amazonka
                      , amazonka-core
                      , amazonka-s3
                      , async
                      , attackstream-indexer
                      , avro
                      , binary
                      , BoundedChan
                      , bytestring
                      , conduit
                      , conduit-combinators
                      , containers
                      , datadog
                      , exceptions
                      , hedgehog
                      , hs-arbor-logger
                      , hspec
                      , http-types
                      , hw-balancedparens
                      , hw-bits
                      , hw-conduit
                      , hw-conduit
                      , hw-kafka-avro
                      , hw-kafka-avro
                      , hw-kafka-client
                      , hw-kafka-client
                      , hw-kafka-conduit
                      , hw-kafka-conduit
                      , hw-prim
                      , hw-rankselect
                      , hw-rankselect-base
                      , hw-xml
                      , lens
                      , monad-control
                      , monad-logger
                      , mtl
                      , network
                      , optparse-applicative
                      , resourcet
                      , text
                      , time
                      , transformers-base
                      , vector
                      , zlib
  ghc-options:       -threaded -rtsopts -O2
  default-extensions: OverloadedStrings, TupleSections
  if os(darwin)
    cpp-options: -D__attribute__(A)= -D_Nullable= -D_Nonnull=

library
  hs-source-dirs:       src
  exposed-modules:      App
                      , App.Application
                      , App.AppError
                      , App.AppOptions
                      , App.AppState
                      , App.AWS.S3
                      , App.Compression
                      , App.FileChange
                      , App.Index
                      , App.Kafka
                      , App.Options
                      , App.Orphans
                      , App.Submissions
                      , App.XmlIndexFile
  default-language:     Haskell2010
  ghc-options:          -Wall
  build-depends:        base >= 4.7 && < 5
                      , amazonka
                      , amazonka-core
                      , amazonka-s3
                      , async
                      , avro
                      , binary
                      , BoundedChan
                      , bytestring
                      , cereal
                      , conduit
                      , conduit-combinators
                      , conduit-extra
                      , containers
                      , datadog
                      , exceptions
                      , hedgehog
                      , hs-arbor-logger
                      , hspec
                      , http-types
                      , hw-balancedparens
                      , hw-bits
                      , hw-conduit
                      , hw-conduit
                      , hw-kafka-avro
                      , hw-kafka-avro
                      , hw-kafka-client
                      , hw-kafka-client
                      , hw-kafka-conduit
                      , hw-kafka-conduit
                      , hw-prim
                      , hw-rankselect
                      , hw-rankselect-base
                      , hw-xml
                      , lens
                      , mmap
                      , monad-control
                      , monad-logger
                      , mtl
                      , network
                      , optparse-applicative
                      , resourcet
                      , text
                      , time
                      , transformers-base
                      , vector
                      , zlib
  default-extensions: OverloadedStrings, TupleSections
  if os(darwin)
    cpp-options: -D__attribute__(A)= -D_Nullable= -D_Nonnull=

test-suite tests
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       tests
  other-modules:        App.OptionsSpec
                      , App.IndexFileSpec
  main-is:              Spec.hs
  ghc-options:          -Wall -threaded
  build-depends:        base >= 4.7 && < 5
                      , amazonka
                      , amazonka-core
                      , amazonka-s3
                      , attackstream-indexer
                      , avro
                      , binary
                      , bytestring
                      , bytestring-conversion
                      , conduit
                      , containers
                      , datadog
                      , exceptions
                      , hedgehog
                      , hs-arbor-logger
                      , hspec
                      , http-types
                      , hw-balancedparens
                      , hw-bits
                      , hw-conduit
                      , hw-conduit
                      , hw-kafka-avro
                      , hw-kafka-avro
                      , hw-kafka-client
                      , hw-kafka-client
                      , hw-kafka-conduit
                      , hw-kafka-conduit
                      , hw-prim
                      , hw-rankselect
                      , hw-rankselect-base
                      , hw-xml
                      , lens
                      , monad-control
                      , monad-logger
                      , mtl
                      , network
                      , resourcet
                      , text
                      , transformers-base
                      , vector
                      , zlib
  default-extensions: OverloadedStrings, TupleSections
  if os(darwin)
    cpp-options: -D__attribute__(A)= -D_Nullable= -D_Nonnull=
